--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 AIRFLOW_UID=50000
 AIRFLOW_GID=0
-PYTHONPATH=lib
+PYTHONPATH=/home/wenxing/Projects/test-helmfile/airflow/lib/python:/home/wenxing/Projects/test-helmfile/airflow/plugins
